Github account added

--- a/_posts/2020-08-21-About-Me.md
+++ b/_posts/2020-08-21-About-Me.md
@@ -12,4 +12,5 @@ Find me at:
 * [Google Scholar](https://scholar.google.com/citations?user=Z7FLTX4AAAAJ&hl=en)
 * [Medium](https://medium.com/@kourosh_rahimi)
 * [Virgool](https://virgool.io/@kourosh_rahimi)
+* [Github](https://github.com/kouroshrahimi)
 * [Twitter](https://www.twitter.com/rahimi_kourosh)
